# eCole

./: .env.example  .gitignore  .pre-commit-config.yaml  ACTION_REGISTRY.yaml  LICENSE  README copy.md  README.md  pyproject.toml
ecole/: __init__.py  __main__.py  action_registry.yaml  requirements.txt
ecole/backend/: app.py
ecole/backend/brain/: basal_ganglia.py  cerebellum.py  frontal.py  limbic.py  parietal.py  temporal.py
ecole/backend/cortex/: action_registry.py  executive.py
ecole/backend/memory/: store.py  summarize.py
ecole/backend/models/: llm.py  llm_provider.py  model_router.py
ecole/backend/models/tests/: test_llm_integration.py  test_llm_provider.py  test_router.py
ecole/backend/senses/: embeddings.py  ingest.py  nlp.py
ecole/backend/state/: schema.py
ecole/backend/utils/: time.py
ecole/core/: decision_log.py  interfaces.py  run_context.py
ecole/frontend/: app.js  index.html  style.css
ecole/memory/: client_stub.py  schema.json
ecole/modules/: base.py
ecole/permissions/: action_registry.py  registry_schema.json
ecole/router/: client_stub.py  router_policy.yaml
ecole/ui/: console_stub.py
eval/: README.md
scripts/: smoke_chat.py
tests/: test_action_registry.py  test_interfaces.py  test_permissions.py
